# 06-ai-engineering-bootcamp-cohort-2

./: .env.example  .gitignore  Dockerfile.fastapi  Dockerfile.streamlit  Makefile  README.md  docker-compose.yml  pyproject.toml
evals/: eval_coordinator_agent.py  eval_retriever.py
notebooks/week_1/: 01-llm-apis.ipynb  02-explore-amazon-dataset.ipynb  03-explore-arxiv-api.ipynb
notebooks/week_2/: 01-RAG-preprocessing-Amazon.ipynb  02-RAG-pipeline.ipynb  03-evaluation-dataset.ipynb  04-RAG-Evals.ipynb
notebooks/week_3/: 01-Structured-Outputs-Intro.ipynb  02-Structured-Outputs-RAG-pipeline.ipynb  03-Hybrid-Search.ipynb  04-Reranking.ipynb  05-Prompt-Versioning.ipynb
notebooks/week_3/prompts/: retrieval_generation.yaml
notebooks/week_4/: 01-LangGraph-Intro.ipynb  02-Query-Rewriting.ipynb  03-Router.ipynb  04-Agent-Single-Turn.ipynb
notebooks/week_4/utils/: utils.py
notebooks/week_5/: 01-Agent-Multi-Turn.ipynb  02-Multiple-Tools.ipynb  03-Streaming-State.ipynb  04-Human-Feedback.ipynb  05-MCP.ipynb
notebooks/week_6/: 01-Shopping-Cart-Tools.ipynb  02-Shopping-Cart-Agent.ipynb  03-Coordinator-Agent.ipynb  04-Coordinator-Evaluation.ipynb
notebooks/week_6/utils/: tools.py
notebooks/week_7/: 01-Warehouse-Agent-Database.ipynb  02-Warehouse-Agent-Tools.ipynb  03-Warehouse-Agent-LangGraph.ipynb  04-litellm-router.ipynb  05-CI-Quality-Gate.ipynb
notebooks/week_7/utils/: tools.py
src/api/: app.py
src/api/agent/: agents.py  graph.py  retrieval_generation.py  (+1 more)
src/chatbot_ui/: app.py
src/items_mcp_server/: main.py  utils.py
src/reviews_mcp_server/: utils.py
(+12 files in other folders)
